# cfd-numerical-solver

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README.org  STRUCTURE.org  VARIABLES.org  config.yaml  config.yml  flake.nix  trace.py
cmake/: Dependencies.cmake  Documentation.cmake  DoxygenFetcher.cmake  PackageFetcher.cmake
data/output/: N_200__step_0000.vtk  N_200__step_0001.vtk
doc/: Doxyfile.in  custom.css  custom_footer.html  custom_header.html  extra_stylesheet.css  header.html  mainpage.dox
include/: Simulation.hpp
include/bc/: BoundaryCondition.hpp  BoundaryFactory.hpp  BoundaryManager.hpp  FreeStreamBoundary.hpp  InletBoundary.hpp  InternalBoundaryCondition.hpp  NonReflectiveBoundary.hpp  OutletBoundary.hpp  PeriodicBoundary.hpp  ReflectiveBoundary.hpp  SlipWallInternalBoundary.hpp  SymmetryBoundary.hpp  WallBoundary.hpp
include/config/: Config.hpp  ConfigParser.hpp  InitialConditions.hpp  Settings.hpp  StepWriter.hpp
include/data/: DataLayer.hpp  GlobalVariables.hpp  InitialConditions.hpp  Mesh.hpp  Variables.hpp  Workspace.hpp
include/data/geometry/: CircleGeometry.hpp  GeometryPrimitive.hpp  RectangleGeometry.hpp
include/filter/: SolutionFilter.hpp
include/limiter/: GlobalLimiter.hpp  VacuumFixLimiter.hpp
include/output/: GIFWriter.hpp  PNGWriter.hpp  StepWriter.hpp  VTKWriter.hpp  WriterFactory.hpp
include/parallel/: DomainDecomposition.hpp  HaloExchange.hpp  MPIContext.hpp
include/reconstruction/: ENOReconstruction.hpp  P0Reconstruction.hpp  P1Reconstruction.hpp  Reconstruction.hpp  WENOReconstruction.hpp
include/riemann/: AcousticRiemannSolver.hpp  ExactIdealGasRiemannSolver.hpp  HLLCRiemannSolver.hpp  HLLRiemannSolver.hpp  OsherRiemannSolver.hpp  RiemannHelpers.hpp  RiemannSolver.hpp  RoeRiemannSolver.hpp  RusanovRiemannSolver.hpp
include/solver/: AnalyticalSolver.hpp  CabaretSolver.hpp  EOS.hpp  FiniteVolumeSolver.hpp  GodunovKolganRodionovSolver.hpp  GodunovSolver.hpp  MacCormackSolver.hpp  PositivityLimiter.hpp  Solver.hpp  SolverFactory.hpp  TimeStepCalculator.hpp  Variables.hpp
include/spatial/: BackwardEulerSpatialOperator.hpp  FLICSpatialOperator.hpp  ForwardEulerSpatialOperator.hpp  GodunovKolganRodionovSpatialOperator.hpp  GodunovSpatialOperator.hpp  GodunovSpatialOperator2D.hpp  SpatialOperator.hpp
include/time/: ForwardEulerTimeIntegrator.hpp  MacCormackTimeIntegrator.hpp  SSPRK2TimeIntegrator.hpp  SSPRK3TimeIntegrator.hpp  TimeIntegrator.hpp
include/utils/: StringUtils.hpp
include/viscosity/: ArtificialViscosity.hpp  VNRArtificialViscosity.hpp
include/visualization/: VTKWriter.hpp  VtkWriter.hpp
src/: Simulation.cpp  main.cpp
src/bc/: BoundaryFactory.cpp  BoundaryManager.cpp  FreeStreamBoundary.cpp  InletBoundary.cpp  NonReflectiveBoundary.cpp  OutletBoundary.cpp  PeriodicBoundary.cpp  ReflectiveBoundary.cpp  SlipWallInternalBoundary.cpp  SymmetryBoundary.cpp  WallBoundary.cpp
src/config/: ConfigParser.cpp
src/data/: DataLayer.cpp  Mesh.cpp  Variables.cpp  Workspace.cpp
src/data/geometry/: CircleGeometry.cpp  GeometryFactory.cpp  RectangleGeometry.cpp
src/filter/: SolutionFilter.cpp
src/limiter/: GlobalLimiter.cpp  VacuumFixLimiter.cpp
src/output/: GIFWriter.cpp  PNGWriter.cpp  VTKWriter.cpp  WriterFactory.cpp
src/parallel/: DomainDecomposition.cpp  HaloExchange.cpp  MPIContext.cpp
src/reconstruction/: ENOReconstruction.cpp  P0Reconstruction.cpp  P1Reconstruction.cpp  WENOReconstruction.cpp
src/riemann/: AcousticRiemannSolver.cpp  ExactIdealGasRiemannSolver.cpp  HLLCRiemannSolver.cpp  HLLRiemannSolver.cpp  OsherRiemannSolver.cpp  RoeRiemannSolver.cpp  RusanovRiemannSolver.cpp
src/solver/: AnalyticalSolver.cpp  CabaretSolver.cpp  EOS.cpp  FiniteVolumeSolver.cpp  GodunovKolganRodionovSolver.cpp  GodunovSolver.cpp  MacCormackSolver.cpp  PositivityLimiter.cpp  Reconstruction.cpp  Solver.cpp  SolverFactory.cpp  TimeStepCalculator.cpp  Variables.cpp
src/spatial/: BackwardEulerSpatialOperator.cpp  FLICSpatialOperator.cpp  ForwardEulerSpatialOperator.cpp  GodunocKolganRodionovSpatialOperator.cpp  GodunovKolganRodionovSpatialOperator.cpp  GodunovSpatialOperator.cpp  GodunovSpatialOperator2D.cpp
src/time/: ForwardEulerTimeIntegrator.cpp  MacCormackTimeIntegrator.cpp  SSPRK2TimeIntegrator.cpp  SSPRK3TimeIntegrator.cpp  TimeIntegrator.cpp
src/utils/: StringUtils.cpp
src/viscosity/: VNRArtificialViscosity.cpp
src/visualization/: VTKWriter.cpp  VtkWriter.cpp
